--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ header {
   font-size: 16px;
   color: #1c1c1c;
   margin-left: 72px;
+  transition: all 0.3s ease;
 }
 
 .menu_item ul li:last-child a {
@@ -110,10 +111,9 @@ header {
   color: #fff;
   padding: 16px 32px;
   border-radius: 36px;
-  transition: all 0.3s ease;
 }
 
-.menu_item ul li:last-child a:hover {
+.menu_item ul li a:hover {
   opacity: 0.7;
 }
 /* -- header area end -- */
@@ -139,6 +139,10 @@ header {
 .hero_left {
   display: block;
   width: 192px;
+}
+
+.hero_left img {
+  width:100%;
 }
 
 .hero_right p {
@@ -173,6 +177,31 @@ header {
   font-weight: normal;
   margin-left: 8px;
 }
+
+.bar {
+  width: 30px;
+  cursor: pointer;
+}
+
+.bar span {
+  display: block;
+  width: 100%;
+  height: 4px;
+  margin: 4px 0px;
+  border-radius: 10px;
+  background-color: #a129ff;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.offcanvas-start {
+  width: 300px;
+}
+
 /* -- hero area end -- */
 
 /* -- about area start -- */
@@ -360,6 +389,11 @@ h2.workheading {
 
 .contact_left ul li a {
   display: inline-block;
+  transition: all 0.2s ease;
+}
+
+.contact_left ul li a:hover {
+  opacity: 0.7;
 }
 
 .contact_left ul li a img {
