--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,6 @@ label {
 /* -- header area start -- */
 
 header {
-  background-color: #fff;
   padding: 15px 0px;
 }
 
@@ -97,6 +96,7 @@ header {
 .menu_item ul li {
   display: inline-block;
 }
+
 
 .menu_item ul li a {
   display: inline-block;
@@ -142,7 +142,7 @@ header {
 }
 
 .hero_left img {
-  width:100%;
+  width: 100%;
 }
 
 .hero_right p {
@@ -454,6 +454,11 @@ h2.workheading {
 .copyright_wrapper p {
   font-size: 16px;
   color: #fff;
+}
+
+.bgadd {
+  background-color: #fff;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 }
 
 /* -- copyright area end -- */
